Removes the sections

--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">About</a></li>
-            <li><a href="#links">Links</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="#">About</a></li>
             <li><a href="http://reprozip.readthedocs.org/">Documentation</a></li>
             <li><a href="https://github.com/ViDA-NYU/reprozip">Github project</a></li>
             <li class="dropdown">
@@ -102,14 +100,7 @@ $ reprounzip vagrant upload /tmp/new_config:global-config
 $ reprounzip vagrant run mydirectory/script.sh --cmdline ./myexperiment --other --options inputs/somefile.csv
 experiment: 0%... 25%... 50%... 75%... 100%</code></pre></div>
 
-<div class="page-header" id="links">
-  <strong>Links</strong>
-</div>
-
-<ul>
-  <li><a href="https://github.com/ViDA-NYU/reprozip">Github page</a></li>
-  <li><a href="http://reprozip.readthedocs.org/">Full documentation</a></li>
-</ul>
+<p>For more information, check out the <a href="http://reprozip.readthedocs.org/">full documentation on ReadTheDocs</a>.</p>
 
 <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
 <ul>
