--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
     <link href="theme.css" rel="stylesheet">
 
     <style type="text/css" rel="stylesheet">
+/* Sample code areas */
+@media(min-width:768px) {
+    .codesample-left {
+        width: 75%;
+        margin: 2em auto 1em 0;
+    }
+    .codesample-right {
+        width: 75%;
+        margin: 2em 0 2em 25%;
+    }
+}
+/* Sample titles */
 .code-title {
     font-size: 13px;
     font-weight: 700;
@@ -37,15 +49,23 @@
     -ms-user-select: none;
     user-select: none;
 }
-@media(min-width:768px) {
-    .codesample-left {
-        width: 75%;
-        margin: 2em auto 1em 0;
-    }
-    .codesample-right {
-        width: 75%;
-        margin: 2em 0 2em 25%;
-    }
+
+/* Footer */
+body > .container {
+    padding-bottom: 65px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+    padding: 10px 0;
+}
+.footer p {
+    margin: 0;
+    color: #777;
+    text-align: center;
 }
     </style>
 
@@ -185,9 +205,17 @@ result: -17.814</span></code></pre></div>
 
 <p>For reviewers, even with a compendium in their hands, it may be hard to reproduce the results. There may be no instructions about how to execute the code and explore it further; the experiment may not run on his operating system; there may be missing libraries; library versions may be different; and several issues may arise while trying to install all the required dependencies, a problem colloquially known as <a href="http://en.wikipedia.org/wiki/Dependency_hell">dependency hell</a>.</p>
 
+<p><a href="http://reprozip.readthedocs.org/">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package.</p>
+
 
     </div> <!-- /container -->
 
+<footer class="footer">
+  <div class="container">
+    <p>ReproZip is developed at <a href="http://engineering.nyu.edu/">NYU</a> by the <acronym title="Visualization and Data Analytics">ViDA group</acronym>.</p>
+    <p>Code licensed under <a href="https://github.com/ViDA-NYU/reprozip/blob/master/LICENSE.txt">BSD</a>.</p>
+  </div>
+</footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
