--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ result: -17.814</span></code></pre></div>
 
 <p>Packages can be reproduced in different ways, including chroot environments, <a href="http://www.vagrantup.com/">Vagrant</a>-built virtual machines, and <a href="http://www.docker.com/">Docker</a> containers; more can be added through plugins.</p>
 
-<p>For more information, check out the <a href="http://reprozip.readthedocs.org/">full documentation on ReadTheDocs</a>.</p>
+<p>For more information, check out the <a href="http://reprozip.readthedocs.org/">full documentation</a>.</p>
 
 <div class="page-header" id="references">
     <h2>Why ReproZip?</h2>
