Re-organizing Links and References

--- a/index.html
+++ b/index.html
@@ -214,9 +214,17 @@ result: -17.814</span></code></pre></div>
 <p><a href="http://reprozip.readthedocs.org/">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package. Also, the tool makes it easier to reproduce an experiment by providing different unpacking methods and interfaces that avoids the need to install all the required dependencies and that makes it possible to run the experiment under different inputs.</p>
 
 <div class="page-header" id="references">
+  <h2>Feedback</h2>
+</div>
+        
+<p>Contact us at <em>reprozip-users@vgc.poly.edu</em> for feedback, questions, concerns, and issues.
+        Also, please use this mailing list to <b>share your use cases</b> with us, as well as to report on
+        best practices and lessons learned for reproducibility!</p>
+
+<div class="page-header" id="references">
   <h2>Links and References</h2>
 </div>
-
+        
 <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
 <ul>
   <li><a href="http://vgc.poly.edu/~fchirigati/">Fernando Chirigati</a></li>
@@ -227,8 +235,7 @@ result: -17.814</span></code></pre></div>
 
 <p>You can find more information about the first version of ReproZip in our paper published at <a href="http://vgc.poly.edu/~fchirigati/papers/chirigati-tapp2013.pdf">TaPP'13</a> and in our demo presented at <a href="http://vgc.poly.edu/~fchirigati/papers/chirigati-sigmod2013.pdf">SIGMOD'13</a>.</p>
 
-<p>Questions? Concerns? Issues? You can contact us at <em>reprozip-users@vgc.poly.edu</em>. Our bug tracker is also available <a href="https://github.com/ViDA-NYU/reprozip/issues">here</a>.</p>
-
+<p>Our bug tracker is available <a href="https://github.com/ViDA-NYU/reprozip/issues">here</a>.</p>
 
     </div> <!-- /container -->
 
