Adds link to reprounzip-vistrails

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ body > .container {
                 <li><a href="https://pypi.python.org/pypi/reprounzip">reprounzip</a></li>
                 <li><a href="https://pypi.python.org/pypi/reprounzip-docker">reprounzip-docker</a></li>
                 <li><a href="https://pypi.python.org/pypi/reprounzip-vagrant">reprounzip-vagrant</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip-vistrails">reprounzip-vistrails</a></li>
               </ul>
             </li>
           </ul>
