Including installers to website

--- a/index.html
+++ b/index.html
@@ -120,17 +120,25 @@ body > .container {
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">About</a></li>
-            <li><a href="http://reprozip.readthedocs.org/">Documentation</a></li>
-            <li><a href="https://github.com/ViDA-NYU/reprozip">Github Project</a></li>
+            <li><a href="http://reprozip.readthedocs.org/" target="_blank">Documentation</a></li>
+            <li><a href="https://github.com/ViDA-NYU/reprozip" target="_blank">GitHub Project</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PyPI Packages<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="https://pypi.python.org/pypi/reprozip">reprozip</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip">reprounzip</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-docker">reprounzip-docker</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-vagrant">reprounzip-vagrant</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-vistrails">reprounzip-vistrails</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprozip" target="_blank">reprozip</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip" target="_blank">reprounzip</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip-docker" target="_blank">reprounzip-docker</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip-vagrant" target="_blank">reprounzip-vagrant</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip-vistrails" target="_blank">reprounzip-vistrails</a></li>
               </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Installers<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/0.5.1/reprounzip-0.5.1-setup.exe" target="_blank">Windows 32-bit</a></li>
+                    <li><a href="#">Mac OS X (Coming Soon!)</a></li>
+                    <li><a href="https://binstar.org/vida-nyu/reprounzip" target="_blank">Anaconda</a></li>
+                </ul>
             </li>
           </ul>
         </div><!--/.nav-collapse -->
