Updates link for Mac OS binary

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ body > .container {
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Installers<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/0.6/reprounzip-0.6-setup.exe" target="_blank">Windows 32-bit</a></li>
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/0.5.1/reprounzip-0.5.1.pkg">Mac OS X (0.5.1 for now)</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/0.6/reprounzip-0.6.pkg">Mac OS X</a></li>
                     <li><a href="https://binstar.org/vida-nyu/reprounzip" target="_blank">Anaconda</a></li>
                 </ul>
             </li>
