Update URL for Remi

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ result: -17.814</span></code></pre></div>
 <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
 <ul>
   <li><a href="http://vgc.poly.edu/~fchirigati/">Fernando Chirigati</a></li>
-  <li><a href="http://www.linkedin.com/pub/remi-rampin/28/b78/6a1/en">R&eacute;mi Rampin</a></li>
+  <li><a href="http://remram.fr/">R&eacute;mi Rampin</a></li>
   <li><a href="http://vgc.poly.edu/~juliana/">Juliana Freire</a></li>
   <li><a href="http://cs.nyu.edu/shasha/">Dennis Shasha</a></li>
 </ul>
