Update Anaconda link
binstar.org is now anaconda.org, also don't link to the reprounzip
package specifically.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body > .container {
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2-setup.exe" target="_blank">Windows</a></li>
                     <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2.pkg" target="_blank">Mac OS X</a></li>
-                    <li><a href="https://binstar.org/vida-nyu/reprounzip" target="_blank">Anaconda</a></li>
+                    <li><a href="https://anaconda.org/ViDA-NYU" target="_blank">Anaconda</a></li>
                 </ul>
             </li>
           </ul>
