Adding page with papers, posters, and presentation.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>ReproZip</title>
+    <title>ReproZip - About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -120,6 +120,15 @@ body > .container {
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">About</a></li>
+            <li class="dropdown">
+                <a href="new.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">News<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="news.html#news">What's New</a></li>
+                    <li><a href="news.html#presentations">Presentations</a></li>
+                    <li><a href="news.html#publications">Publications</a></li>
+                    <li><a href="news.html#posters">Posters</a></li>
+                </ul>
+            </li>
             <li><a href="http://reprozip.readthedocs.org/" target="_blank">Documentation</a></li>
             <li><a href="https://github.com/ViDA-NYU/reprozip" target="_blank">GitHub Project</a></li>
             <li class="dropdown">
@@ -223,8 +232,8 @@ result: -17.814</span></code></pre></div>
         Also, please use this mailing list to <b>share your use cases</b> with us, as well as to report on
         best practices and lessons learned for reproducibility!</p>
 
-<div class="page-header" id="references">
-  <h2>Links and References</h2>
+<div class="page-header" id="people">
+  <h2>People</h2>
 </div>
         
 <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
@@ -234,10 +243,6 @@ result: -17.814</span></code></pre></div>
   <li><a href="http://vgc.poly.edu/~juliana/">Juliana Freire</a></li>
   <li><a href="http://cs.nyu.edu/shasha/">Dennis Shasha</a></li>
 </ul>
-
-<p>You can find more information about the first version of ReproZip in our paper published at <a href="http://vgc.poly.edu/~fchirigati/papers/chirigati-tapp2013.pdf">TaPP'13</a> and in our demo presented at <a href="http://vgc.poly.edu/~fchirigati/papers/chirigati-sigmod2013.pdf">SIGMOD'13</a>.</p>
-
-<p>Our bug tracker is available <a href="https://github.com/ViDA-NYU/reprozip/issues">here</a>.</p>
 
     </div> <!-- /container -->
 
