--- a/news.html
+++ b/news.html
@@ -164,6 +164,13 @@ New York City, NY, October 2015
 
 <br/><br/>
 
+<i><a href="http://cs.nyu.edu/cs/faculty/shasha/papers/att_shasha_oct10_2015_dennis.ppt" target="_blank">Liquid Version Climber: a Reproducibility-based Approach for Upgrading Complex Software</a></i><br/>
+ATT Labs<br/>
+Presented by Dennis Shasha<br/>
+New York City, NY, October 2015
+
+<br/><br/>
+
 <i><a href="http://bigdata.poly.edu/~fchirigati/presentations/2015-talk-berkeley.pdf" target="_blank">Facilitating Reproducibility After the Fact</a></i><br/>
 BIDS Reproducibility Conference, University of California, Berkeley<br/>
 Presented by Fernando Chirigati<br/>
@@ -181,10 +188,10 @@ Seattle, WA, May 2015
 
 <h4>2013</h4>
 
-<p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/BTPDF2-2013.pdf" target="_blank">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
-Beyond the PDF 2 Conference - Visions for the Future Session<br/>
+<p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/ReproZip-WorkshopReproducibleScience.pdf" target="_blank">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
+Workshop on Software Infrastructure for Reproducibility in Science<br/>
 Presented by Fernando Chirigati<br/>
-Amsterdam, Netherlands, March 2013
+Brooklyn, NY, May 2013
 <br/>
 <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank">deprecated version</a>.</i></b>
 
@@ -200,10 +207,10 @@ Lombard, IL, April 2013
 
 <br/><br/>
 
-<i><a href="http://bigdata.poly.edu/~fchirigati/presentations/ReproZip-WorkshopReproducibleScience.pdf" target="_blank">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
-Workshop on Software Infrastructure for Reproducibility in Science<br/>
+<i><a href="http://bigdata.poly.edu/~fchirigati/presentations/BTPDF2-2013.pdf" target="_blank">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
+Beyond the PDF 2 Conference - Visions for the Future Session<br/>
 Presented by Fernando Chirigati<br/>
-Brooklyn, NY, May 2013
+Amsterdam, Netherlands, March 2013
 <br/>
 <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank">deprecated version</a>.</i></b>
 
