Updates on presentations.

--- a/news.html
+++ b/news.html
@@ -165,7 +165,7 @@ New York City, NY, October 2015
 <br/><br/>
 
 <i><a href="http://cs.nyu.edu/cs/faculty/shasha/papers/att_shasha_oct10_2015_dennis.ppt" target="_blank">Liquid Version Climber: a Reproducibility-based Approach for Upgrading Complex Software</a></i><br/>
-ATT Labs<br/>
+AT&amp;T Labs Research<br/>
 Presented by Dennis Shasha<br/>
 New York City, NY, October 2015
 
