Updates on presentations.

--- a/news.html
+++ b/news.html
@@ -182,6 +182,13 @@ Berkeley, CA, May 2015
 Reproducibility Seminar, University of Washington<br/>
 Presented by Fernando Chirigati
 [<a href="https://panopto.uw.edu/Panopto/Pages/Viewer.aspx?id=2b52fcef-65ed-7649-ad8e-7b4d07dbc341" target="_blank">video (ReproZip)</a>]<br/>
+Paris, France, May 2015
+
+<br/><br/>
+
+<i><a href="http://cs.nyu.edu/cs/faculty/shasha/papers/shasha_digicosme.pptx" target="_blank">Computational Reproducibility: Why Needed, First Tools, Open Problems</a></i><br/>
+DigiCosme, ENSTA ParisTech<br/>
+Presented by Dennis Shasha<br/>
 Seattle, WA, May 2015
 
 <br/><br/></p>
