Updates on presentations.

--- a/news.html
+++ b/news.html
@@ -181,15 +181,15 @@ Berkeley, CA, May 2015
 <i><a href="http://bigdata.poly.edu/~fchirigati/presentations/2015-talk-uw.pdf" target="_blank">Facilitating Reproducibility After the Fact</a></i><br/>
 Reproducibility Seminar, University of Washington<br/>
 Presented by Fernando Chirigati
-[<a href="https://panopto.uw.edu/Panopto/Pages/Viewer.aspx?id=2b52fcef-65ed-7649-ad8e-7b4d07dbc341" target="_blank">video (ReproZip)</a>]<br/>
-Paris, France, May 2015
+[<a href="https://panopto.uw.edu/Panopto/Pages/Viewer.aspx?id=2b52fcef-65ed-7649-ad8e-7b4d07dbc341" target="_blank">video</a>]<br/>
+Seattle, WA, May 2015
 
 <br/><br/>
 
 <i><a href="http://cs.nyu.edu/cs/faculty/shasha/papers/shasha_digicosme.pptx" target="_blank">Computational Reproducibility: Why Needed, First Tools, Open Problems</a></i><br/>
 DigiCosme, ENSTA ParisTech<br/>
 Presented by Dennis Shasha<br/>
-Seattle, WA, May 2015
+Paris, France, May 2015
 
 <br/><br/></p>
 
