--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body > .container {
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">About</a></li>
             <li class="dropdown">
-                <a href="new.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">News<span class="caret"></span></a>
+                <a href="news.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">News<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="news.html#news">What's New</a></li>
                     <li><a href="news.html#presentations">Presentations</a></li>
