--- a/news.html
+++ b/news.html
@@ -115,11 +115,11 @@ body > .container {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html#">ReproZip</a>
+          <a class="navbar-brand" href="index.html">ReproZip</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html#">About</a></li>
+            <li><a href="index.html">About</a></li>
             <li class="dropdown active">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">News<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
