Add presentation at MSDSE summit

--- a/news.html
+++ b/news.html
@@ -180,6 +180,13 @@ New York City, NY, October 2015
 
 <br/><br/>
 
+<i><a href="https://docs.google.com/file/d/0B3ucPz7GSthBUmRKTlEwRFB6U1U/edit" target="_blank">Reproducible Experiments as an Afterthought</a></i><br/>
+Moore-Sloan Data Science Environment Summit<br/>
+Presented by R&eacute;mi Rampin<br/>
+Suncadia, WA, October 2015
+
+<br/><br/>
+
 <i><a href="http://cs.nyu.edu/cs/faculty/shasha/papers/att_shasha_oct10_2015_dennis.ppt" target="_blank">Liquid Version Climber: a Reproducibility-based Approach for Upgrading Complex Software</a></i><br/>
 AT&amp;T Labs Research<br/>
 Presented by Dennis Shasha<br/>
