--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body > .container {
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Installers<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2-setup.exe" target="_blank">Windows</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2-1-setup.exe" target="_blank">Windows</a></li>
                     <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2.pkg" target="_blank">Mac OS X</a></li>
                     <li><a href="https://anaconda.org/ViDA-NYU" target="_blank">Anaconda</a></li>
                 </ul>
