Fix markup errors

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ $ reprounzip vagrant <span class="s">setup</span> my_experiment.rpz mydirectory
 ==> default: Booting VM...
 ==> default: Machine booted and ready!
 ==> default: Running provisioner: shell...</span>
-$ reprounzip vagrant <span class="s">run</span> mydirectory</span>
+$ reprounzip vagrant <span class="s">run</span> mydirectory
 <span class="nt">experiment: 0%... 25%... 50%... 75%... 100%
 result: 42.137</span>
 $ reprounzip vagrant <span class="s">upload</span> /tmp/new_config:global-config
@@ -218,7 +218,7 @@ result: -17.814</span></code></pre></div>
 
 <p>For more information, check out the <a href="http://reprozip.readthedocs.org/">full documentation</a>.</p>
 
-<div class="page-header" id="references">
+<div class="page-header" id="why">
     <h2>Why ReproZip?</h2>
 </div>
 
@@ -234,7 +234,7 @@ result: -17.814</span></code></pre></div>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-zLPuwCHXo0" frameborder="0" allowfullscreen></iframe>
 
-<div class="page-header" id="references">
+<div class="page-header" id="feedback">
   <h2>Feedback</h2>
 </div>
         
