Remove annoying `target="_blank"`attributes

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ iframe {
                     <li><a href="news.html#posters">Posters</a></li>
                 </ul>
             </li>
-            <li><a href="http://reprozip.readthedocs.org/" target="_blank">Documentation</a></li>
-            <li><a href="https://github.com/ViDA-NYU/reprozip" target="_blank">GitHub Project</a></li>
+            <li><a href="http://reprozip.readthedocs.org/">Documentation</a></li>
+            <li><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PyPI Packages<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
@@ -150,8 +150,8 @@ iframe {
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Installers<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2-1-setup.exe" target="_blank">Windows</a></li>
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2.pkg" target="_blank">Mac OS X</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2-1-setup.exe">Windows</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2.pkg">Mac OS X</a></li>
                     <li><a href="https://anaconda.org/ViDA-NYU" target="_blank">Anaconda</a></li>
                 </ul>
             </li>
@@ -228,9 +228,9 @@ result: -17.814</span></code></pre></div>
 
 <p>For reviewers, even with a compendium in their hands, it may be hard to reproduce the results. There may be no instructions about how to execute the code and explore it further; the experiment may not run on his operating system; there may be missing libraries; library versions may be different; and several issues may arise while trying to install all the required dependencies, a problem colloquially known as <a href="http://en.wikipedia.org/wiki/Dependency_hell" target="_blank">dependency hell</a>.</p>
 
-<p><a href="http://reprozip.readthedocs.org/" target="_blank">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package. Also, the tool makes it easier to reproduce an experiment by providing different unpacking methods and interfaces that avoids the need to install all the required dependencies and that makes it possible to run the experiment under different inputs.</p>
+<p><a href="http://reprozip.readthedocs.org/">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package. Also, the tool makes it easier to reproduce an experiment by providing different unpacking methods and interfaces that avoids the need to install all the required dependencies and that makes it possible to run the experiment under different inputs.</p>
 
-<p>The following video shows how to use ReproZip to make your experiment reproducible. The example used in the video is based on a <a href="http://scikit-learn.org/stable/auto_examples/plot_digits_classification.html" target="_blank">tutorial</a> from the scikit-learn Python library and is available for download <a href="http://bigdata.poly.edu/~fchirigati/others/example.zip" target="_blank">here</a>.</p>
+<p>The following video shows how to use ReproZip to make your experiment reproducible. The example used in the video is based on a <a href="http://scikit-learn.org/stable/auto_examples/plot_digits_classification.html" target="_blank">tutorial</a> from the scikit-learn Python library and is available for download <a href="http://bigdata.poly.edu/~fchirigati/others/example.zip">here</a>.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-zLPuwCHXo0" frameborder="0" allowfullscreen></iframe>
 
