--- a/news.html
+++ b/news.html
@@ -129,8 +129,8 @@ body > .container {
                     <li><a href="#posters">Posters</a></li>
                 </ul>
             </li>
-            <li><a href="http://reprozip.readthedocs.org/" target="_blank">Documentation</a></li>
-            <li><a href="https://github.com/ViDA-NYU/reprozip" target="_blank">GitHub Project</a></li>
+            <li><a href="http://reprozip.readthedocs.org/">Documentation</a></li>
+            <li><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PyPI Packages<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
@@ -144,8 +144,8 @@ body > .container {
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Installers<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2-setup.exe" target="_blank">Windows</a></li>
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2.pkg" target="_blank">Mac OS X</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2-setup.exe">Windows</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2.pkg">Mac OS X</a></li>
                     <li><a href="https://anaconda.org/ViDA-NYU" target="_blank">Anaconda</a></li>
                 </ul>
             </li>
