--- a/news.html
+++ b/news.html
@@ -162,7 +162,7 @@ body > .container {
 </div>
 
 <ul>
-	<li>ReproZip is listed on the <a href="http://www.artifact-eval.org/guidelines.html" target="_blank">Artifact Evaluation Process</a>.</li>
+	<li>ReproZip is listed on the <a href="http://www.artifact-eval.org/guidelines.html" target="_blank">Artifact Evaluation Process guidelines</a>.</li>
     <li>ReproZip v1.0.2 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.2" target="_blank">released</a>.</li>
     <li>ReproZip is the recommended tool for the Reproducibility Section of the <a href="http://www.journals.elsevier.com/information-systems/" target="_blank">Information Systems Journal, Elsevier</a>.</li>
     <li>ReproZip is the recommended tool for the <a href="http://db-reproducibility.seas.harvard.edu/" target="_blank">ACM SIGMOD 2015 Reproducibility Review</a>.</li>
