adding new presentation

--- a/news.html
+++ b/news.html
@@ -173,6 +173,15 @@ body > .container {
     <h2>Presentations</h2>
 </div>
 
+<h4>2016</h4>
+
+<p><i>ReproZip: Computational Reproducibility with Ease</i><br/>
+<a href="http://www.dagstuhl.de/de/programm/kalender/semhp/?semnr=16041" target="_blank">Dagstuhl Seminar 16041</a>, Reproducibility of Data-Oriented Experiments in e-Science<br/>
+Presented by Fernando Chirigati<br/>
+Wadern, Germany, January 2016
+
+<br/><br/></p>
+
 <h4>2015</h4>
 
 <p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/2015-tutorial-columbia.pdf" target="_blank">Achieving Reproducibility with ReproZip</a></i><br/>
